now it's displayed like a column instead

--- a/public/index.html
+++ b/public/index.html
@@ -29,20 +29,26 @@
 
   </head>
   <body id = "fade-in">
+
     <div id = "box">
       <h1> Elijah Kennedy </h1> 
       <ul class = "grid-container">
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
-        <li class = "grid-item"> test </li>
+        <li class = "grid-item"> Color Picker </li>
+        <li class = "grid-item"> Stripe API </li>
+        <li class = "grid-item"> Unity </li>
+        <li class = "grid-item"> Video </li>
+        <li class = "grid-item"> Animation </li>
+        <li class = "grid-item"> Interview </li>
+        <li class = "grid-item"> Say Hi </li>
+        <li class = "grid-item"> Mwesu </li>
+        <li class = "grid-item"> Resume </li>
 
       </ul>
     </div>
+
+    <div id = "box2">
+
+    </div>
+
   </body>
 </html>
