the toggle works nowgit add --all

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div id = "box">
       <h1> Elijah Kennedy </h1> 
       <ul class = "grid-container">
-        <li class = "grid-item"> Color Picker </li>
+        <li id = "1" class = "grid-item"> Color Picker </li>
         <li class = "grid-item"> Stripe API </li>
         <li class = "grid-item"> Unity </li>
         <li class = "grid-item"> Video </li>
@@ -47,7 +47,7 @@
     </div>
 
     <div id = "box2">
-      <p id = "text-info"> Hey! </p>
+      <p id = "text-display"></p>
     </div>
 
   </body>
