iterating through the li elements successfully

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
     <div id = "box">
       <h1> Elijah Kennedy </h1> 
-      <ul class = "grid-container">
+      <ul id = "the-list" class = "the-list">
         <li id = "1" class = "grid-item"> Color Picker </li>
         <li class = "grid-item"> Stripe API </li>
         <li class = "grid-item"> Unity </li>
