added a text editor pagegit add --all

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> Eli Ken Port Site </title>
+    <title> Elijah Kennedy's Text Editor  </title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.23.0/firebase-app.js"></script>
@@ -18,7 +18,7 @@
 
     <!-- Style -->
     <link href="animation.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="editor.css" rel="stylesheet">
 
     <!-- Fonts -->
     <!-- Fugaz One and VT323 -->
@@ -31,23 +31,27 @@
 
   </head>
   <body id = "fade-in">
-
-    <div id = "box">
-      <h1> Elijah Kennedy </h1> 
-      <ul id = "the-list" class = "the-list">
-        <li id = "1" class = "grid-item"> Color Picker </li>
-        <li class = "grid-item"> Stripe API </li>
-        <li class = "grid-item"> Unity </li>
-        <li class = "grid-item"> Video </li>
-        <li class = "grid-item"> Animation </li>
-        <li class = "grid-item"> Interview </li>
-        <li class = "grid-item" > Text Editor </li>
-
-      </ul>
-    </div>
-
     <div id = "box2">
-      <p id = "text-display"></p>
+      <div class="grid-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>  
+        <div class="grid-item">4</div>
+        <div class="grid-item">5</div>
+        <div class="grid-item">6</div>  
+        <div class="grid-item">7</div>
+        <div class="grid-item">8</div>
+        <div class="grid-item">9</div>  
+      </div>
+
+      <div id = "page">
+
+        <p id = "text-display">
+
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+        </p>
+      </div>
     </div>
 
   </body>
