--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- JS -->
-    <script src="main.js"></script>
+    <script src="editor.js"></script>
 
   </head>
   <body id = "fade-in">
@@ -44,7 +44,7 @@
         <div class="grid-item">9</div>  
       </div>
 
-      <div id = "page">
+      <div id = "page" onClick = "typeWriter()" >
 
         <p id = "text-display">
 
