--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -31,6 +31,7 @@
 
   </head>
   <body id = "fade-in">
+
     <div id = "box2">
       <div class="grid-container">
         <div class="grid-item">1</div>
@@ -43,6 +44,8 @@
         <div class="grid-item">8</div>
         <div class="grid-item">9</div>  
       </div>
+
+      <input id = "phantom">
 
       <div id = "page" onClick = "typeWriter()" >
 
