cursor only shows when there is focus on the input

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html onClick = "whereFocus()">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,6 +45,7 @@
         <div class="grid-item">9</div>  
       </div>
 
+      <!-- This is the element that gets focused when typing -->
       <input id = "phantom">
 
       <div id = "page" onClick = "typeWriter()" >
