not sure what cursor stuff is changed

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -55,9 +55,24 @@
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
           </br></br>
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </span><span id = "cursor">|</span>
+        </span>
+        <span id = "cursor">|</span>
       </div>
     </div>
 
   </body>
 </html>
+
+<!-- 
+
+1. Make an entry and an outry div and put the cursor in the middle.
+As you move the cursor, just move stuff from entry to outry.
+
+2. Move the cursor around inside of an existing div. This isn't working great...
+not sure why really. I'm gonna mess around with it a bit more though first.
+
+3. Create some sort of absolute thing, and then just make the cursor the only thing
+visibile. There are so many helpful parts about this. Keeping it in sync is the only
+problem. But honestly it wouldn't be that hard, right?
+
+-->
