YOO. The cursor can be clicked into position now.

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -50,7 +50,7 @@
 
       <div id = "page" onClick = "typeWriter()" >
         <!-- Newlines in the text editor leave space between stuff :( it's dumb -->
-        <span id = "entry" >Test.</span><span id = "cursor">|</span><span id = "outry"></span>
+        <span id = "entry" ></span><span id = "cursor">|</span><span id = "outry"></span>
       </div>
     </div>
 
