--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -51,7 +51,7 @@
       <div id = "page" onClick = "typeWriter()" >
         <!-- Newlines in the text editor leave space between stuff :( it's dumb -->
         <span id = "placeholder">Click here to write something...</span>
-        <span id = "entry" onClick = "entry()"></span><span id = "cursor">|</span><span id = "outry" onClick = "outry()"></span>
+        <span id = "entry" onClick = "entryOutry('1')"></span><span id = "cursor">|</span><span id = "outry" onClick = "entryOutry(2)"></span>
       </div>
     </div>
 
