--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -45,19 +45,19 @@
         <div class="grid-item">9</div>  
       </div>
 
+      <!-- This is the element that gets focused when typing -->
+      <input id = "phantom">
+
       <div id = "page" onClick = "typeWriter()" >
         <!-- Newlines in the text editor leave space between stuff :( it's dumb
         Also, without these funky comments, space gets between cursor and elements
         (also dumb)
         --><span id = "placeholder">Click here to write something...</span><!--
         --><span id="entry" onClick="entryOutry('1')"></span><!--
-        --><div id = "cursor-wrap"><span id="cursor">|</span></div><!--
+        --><div id = "cursor-wrap">.<span id="cursor">|</span></div><!--
         --><span id="outry" onClick="entryOutry(2)"></span>
       </div>
       <p1 id = "test"></p1>
-
-      <!-- This is the element that gets focused when typing -->
-      <input id = "phantom">
 
     </div>
 
