renamed entryOutry to moveCursor

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -53,9 +53,9 @@
         Also, without these funky comments, space gets between cursor and elements
         (also dumb)
         --><span id = "placeholder">Click here to write something...</span><!--
-        --><span id="entry" onClick="entryOutry('1')"></span><!--
+        --><span id="entry" onClick="moveCursor('1')"></span><!--
         --><div id = "cursor-wrap">.<span id="cursor">|</span></div><!--
-        --><span id="outry" onClick="entryOutry(2)"></span>
+        --><span id="outry" onClick="moveCursor(2)"></span>
       </div>
       <p1 id = "test"></p1>
 
