notes and test display for block system

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -56,6 +56,13 @@
         --><span id="entry" onClick="moveCursor('1')"></span><!--
         --><div id = "cursor-wrap">.<span id="cursor">|</span></div><!--
         --><span id="outry" onClick="moveCursor(2)"></span>
+
+        <!-- Test div: you can delete it-->
+        <div class = "ablock">
+          <span id = "en">This is a very long sentence and it ends up going over the edge and so that's fine.</span id = "curse"><span>|</span><span id = "ex"> And if you have a problem you can take it up with HR brother.</span>
+        </div>
+
+
       </div>
       <p1 id = "test"></p1>
 
