--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -50,12 +50,12 @@
 
       <div id = "page" onClick = "typeWriter()" >
 
-        <div id = "tw">
-            <span id = "placeholder">Click here to write something...</span><!--
+        <div id = "tw"><!--
+          --><span id = "placeholder">Click here to write something...</span><!--
           --><span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
-          --><div id = "cursor-wrap">.<span id="cursor">|</span></div><!--
-          --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
-        </div>
+          --><span id = "cursor-wrap"><span id="cursor">|</span></span><!--
+          --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span><!--
+        --></div>
 
       </div>
 
