arrowLeft without cursor-wrap has first-space bug

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -53,7 +53,7 @@
         <div id = "tw"><!--
           --><span id = "placeholder">Click here to write something...</span><!--
           --><span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
-          --><span id = "cursor-wrap"><span id="cursor">|</span></span><!--
+          --><span id="cursor">|</span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span><!--
         --></div>
 
