--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -51,11 +51,13 @@
       <div id = "page" onClick = "typeWriter()" >
 
         <div id = "tw">
-            <span id = "placeholder">Click here to write something...</span><!--
-          --><span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
-          --><div id = "cursor-wrap">.<span id="cursor">|</span></div><!--
-          --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
+          <span id = "placeholder">Click here to write something...</span>
+          <span id="entry" class = "text-normal" onClick="moveCursor('1')"> This is a whole thing anacondas are a reptilianist</span><!--
+          --><span id = "micro">.<span id = "cursor"></span><!--
+          --><span id="outry" class = "text-normal" onClick="moveCursor(2)">icalatious anomaly with fantastic vocabularies</span>
         </div>
+
+        <!--<div id = "cursor-wrap">.<span id="cursor">|</span></div>-->
 
       </div>
 
