--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -53,7 +53,7 @@
         <div id = "tw">
           <span id = "placeholder">Click here to write something...</span>
           <span id="entry" class = "text-normal" onClick="moveCursor('1')"> This is a whole thing anacondas are a reptilianist</span><!--
-          --><span id = "micro">.<span id = "cursor"></span><!--
+          --><span id = "cursor"></span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)">icalatious anomaly with fantastic vocabularies</span>
         </div>
 
