added 0px period to fix space issue

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -52,9 +52,9 @@
 
         <div id = "tw">
           <span id = "placeholder">Click here to write something...</span>
-          <span id="entry" class = "text-normal" onClick="moveCursor('1')"> This is a whole thing anacondas are a reptilianist</span><!--
-          --><span id = "cursor"></span><!--
-          --><span id="outry" class = "text-normal" onClick="moveCursor(2)">icalatious anomaly with fantastic vocabularies</span>
+          <span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
+          --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
+          --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
         </div>
 
         <!--<div id = "cursor-wrap">.<span id="cursor">|</span></div>-->
