--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -51,7 +51,8 @@
       <div id = "page" onClick = "typeWriter()" >
 
         <div id = "tw">
-          <span id = "placeholder">Click here to write something...</span>
+<!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
+<!--           <span id = "placeholder">Click here to write something...</span> -->
           <span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
