ArrowUp works pretty well

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -53,6 +53,7 @@
         <div id = "tw">
 <!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
 <!--           <span id = "placeholder">Click here to write something...</span> -->
+          <!-- There is a monkey in your uncle and he's pulling all the strings there is a monkey in your uncle and he knows about the pings-->
           <span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
