--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -17,7 +17,7 @@
     <script defer src="/__/firebase/init.js"></script>
 
     <!-- Style -->
-    <link href="animation.css" rel="stylesheet">
+    <link href="../animation.css" rel="stylesheet">
     <link href="editor.css" rel="stylesheet">
 
     <!-- Fonts -->
@@ -30,6 +30,7 @@
     <script src="editor.js"></script>
 
   </head>
+
   <body id = "fade-in">
 
     <div id = "box2">
