UpArrow retains index when skipping to new block

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -51,6 +51,8 @@
 
       <div id = "page" onClick = "typeWriter()" >
 
+        <div class = "text-normal">This is a multiple lined sentence.</div>
+
         <div id = "tw">
 <!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
 <!--           <span id = "placeholder">Click here to write something...</span> -->
@@ -59,8 +61,6 @@
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)">you remember that you actually have to press the ArrowDown button and got one line down. You had already typed something, you see, and you'd gone back. But now you must continue.</span>
         </div>
-
-        <!--<div id = "cursor-wrap">.<span id="cursor">|</span></div>-->
 
       </div>
 
