set currentLineEndIndex on ArrowUp to 0 by default

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -55,12 +55,10 @@
 <!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
 <!--           <span id = "placeholder">Click here to write something...</span> -->
           <!-- There is a monkey in your uncle and he's pulling all the strings there is a monkey in your uncle and he knows about the pings-->
-          <span id="entry" class = "text-normal" onClick="moveCursor('1')">You might be halfway through writing something and then out of the blue, </span><!--
+          <span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
-          --><span id="outry" class = "text-normal" onClick="moveCursor(2)">you remember that you actually have to press the ArrowDown button and got one line down. You had already typed something, you see, and you'd gone back. But now you must continue.</span>
+          --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
         </div>
-
-        <div class = "text-normal">This is a multiple lined sentence.</div>
 
       </div>
 
