added some notes in createNewBlock

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -52,6 +52,7 @@
       <div id = "page" onClick = "typeWriter()" >
 
         <div class = "text-normal">This is a thing. Blah blah lah go the fuck to bed you idiota.</div>
+        <div class = "empty">///</div>
         <div id = "tw">
 <!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
 <!--           <span id = "placeholder">Click here to write something...</span> -->
@@ -60,6 +61,7 @@
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
         </div>
+        <div class = "text-normal">This is a thing. Blah blah lah go the fuck to bed you idiota.</div>
 
       </div>
 
