--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -51,16 +51,16 @@
 
       <div id = "page" onClick = "typeWriter()" >
 
-        <div class = "text-normal">This is a thing. Blah blah lah go the fuck to bed you idiota.</div>
+        <div class = "text-normal"></div>
         <div id = "tw">
 <!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
 <!--           <span id = "placeholder">Click here to write something...</span> -->
           <!-- There is a monkey in your uncle and he's pulling all the strings there is a monkey in your uncle and he knows about the pings-->
-          <span id="entry" class = "text-normal" onClick="moveCursor('1')">There was a moose. He liked to drink a lot of moose. I said he was a moose; he liked to drink a lot of juice.</span><!--
+          <span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
         </div>
-        <div class = "text-normal">This is a thing. Blah blah lah go the fuck to bed you idiota.</div>
+        <div class = "text-normal"></div>
 
       </div>
 
