fixed ArrowUp page top bug

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -50,17 +50,14 @@
       <input id = "phantom">
 
       <div id = "page" onClick = "typeWriter()" >
-
-        <div class = "text-normal"></div>
         <div id = "tw">
 <!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
 <!--           <span id = "placeholder">Click here to write something...</span> -->
           <!-- There is a monkey in your uncle and he's pulling all the strings there is a monkey in your uncle and he knows about the pings-->
-          <span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
+          <span id="entry" class = "text-normal" onClick="moveCursor('1')">So I have a problem now where if you navigate all the way to the top,</span><!--
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
-          --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
+          --><span id="outry" class = "text-normal" onClick="moveCursor(2)">it spits you back to the end of that block.</span>
         </div>
-        <div class = "text-normal"></div>
 
       </div>
 
