--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -54,7 +54,7 @@
 <!--           Messes up the lineheight calculation for ArrowUp and ArrowDown -->
 <!--           <span id = "placeholder">Click here to write something...</span> -->
           <!-- There is a monkey in your uncle and he's pulling all the strings there is a monkey in your uncle and he knows about the pings-->
-          <span id="entry" class = "text-normal" onClick="moveCursor('1')"></span><!--
+          <span id="entry" class = "text-normal moose job" onClick="moveCursor('1')"></span><!--
           --><span id = "cursor-wrap">.</span><span id = "cursor"></span><!--
           --><span id="outry" class = "text-normal" onClick="moveCursor(2)"></span>
         </div>
