added a hover for text

--- a/public/editor/editor.html
+++ b/public/editor/editor.html
@@ -25,6 +25,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=VT323&display=swap" rel="stylesheet">
     <!-- Inconsolata -->
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- Staatliches -->
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 
     <!-- JS -->
     <script src="editor.js"></script>
