--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
     <script defer src="/__/firebase/7.23.0/firebase-database.js"></script>
     <script defer src="/__/firebase/7.23.0/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.23.0/firebase-storage.js"></script>
+    
     <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
     <!-- Style -->
     <link href="animation.css" rel="stylesheet">
